[package]
edition = '2018'
name = 'liquidity-proxy-benchmarking'
version = '0.1.0'
authors = ['Polka Biome Ltd. <jihoon@tutanota.de>']
license = "BSD-4-Clause"
homepage = 'https://sora.org'
repository = 'https://github.com/sora-xor/sora2-network'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "2", default-features = false, features = ["derive"] }
frame-benchmarking = { version = "3", default-features = false }
frame-support = { version = "3", default-features = false }
frame-system = { version = "3", default-features = false }
hex-literal = "0.3.1"
sp-runtime = { version = "3", default-features = false, branch = 'polkadot-v0.9.4', git = 'https://github.com/paritytech/substrate.git' }
sp-std = { version = "3", default-features = false, branch = 'polkadot-v0.9.4', git = 'https://github.com/paritytech/substrate.git' }

assets = { path = "../../assets", default-features = false }
common = { path = "../../../common", default-features = false }
liquidity-proxy = { path = "../../liquidity-proxy", default-features = false }
mock-liquidity-source = { path = "../../mock-liquidity-source", default-features = false }
permissions = { path = "../../permissions", default-features = false }
pool-xyk = { path = "../../pool-xyk", default-features = false }
pswap-distribution = { path = "../../pswap-distribution", default-features = false }
technical = { path = "../../technical", default-features = false }
trading-pair = { path = "../../trading-pair", default-features = false }
multicollateral-bonding-curve-pool = { path = "../../multicollateral-bonding-curve-pool", default-features = false }
dex-manager = { path = "../../dex-manager", default-features = false }
bonding-curve-pool = { path = "../../bonding-curve-pool", default-features = false }
dex-api = { path = "../../dex-api", default-features = false}

[dev-dependencies]
currencies = { version = "0.4", package = "orml-currencies", default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library.git" }

pallet-balances = { version = "3", default-features = false, branch = 'polkadot-v0.9.4', git = 'https://github.com/paritytech/substrate.git' }
serde = { version = "1.0.101", default-features = false, features = ["derive"] }
sp-core = { version = "3", default-features = false, branch = 'polkadot-v0.9.4', git = 'https://github.com/paritytech/substrate.git' }
sp-io = { version = "3", default-features = false, branch = 'polkadot-v0.9.4', git = 'https://github.com/paritytech/substrate.git' }

tokens = { version = "0.4", package = "orml-tokens", default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library.git" }
common = { path = "../../../common", default-features = false, features = ["test"] }
mock-liquidity-source = { path = "../../mock-liquidity-source" }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
    'sp-std/std',
    'sp-runtime/std',
    'sp-core/std',
    'common/std',
    'assets/std',
    'liquidity-proxy/std',
    'mock-liquidity-source/std',
    'pool-xyk/std',
    'permissions/std',
    'technical/std',
    'trading-pair/std',
    'multicollateral-bonding-curve-pool/std',
    'dex-manager/std',
    'bonding-curve-pool/std',
    'dex-api/std',
]
