[package]
edition = '2018'
name = 'pool-xyk-benchmarking'
authors = ['Polka Biome Ltd. <jihoon@tutanota.de>']
license = "BSD-4-Clause"
homepage = 'https://sora.org'
repository = 'https://github.com/sora-xor/sora2-network'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "2", default-features = false, features = ["derive"] }
frame-benchmarking = { version = "3", default-features = false, branch = 'polkadot-v0.9.8', git = 'https://github.com/paritytech/substrate.git' }
frame-support = { version = "3", default-features = false, branch = 'polkadot-v0.9.8', git = 'https://github.com/paritytech/substrate.git' }
frame-system = { version = "3", default-features = false, branch = 'polkadot-v0.9.8', git = 'https://github.com/paritytech/substrate.git' }
sp-std = { version = "3", default-features = false, branch = 'polkadot-v0.9.8', git = 'https://github.com/paritytech/substrate.git' }
sp-core = { version = "3", default-features = false, branch = 'polkadot-v0.9.8', git = 'https://github.com/paritytech/substrate.git' }
common = { path = "../../../common", default-features = false }
assets = { path = "../../assets", default-features = false }
pool-xyk = { path = "../../pool-xyk", default-features = false }
technical = { path = "../../technical", default-features = false }
trading-pair = { path = "../../trading-pair", default-features = false }
permissions = { path = "../../permissions", default-features = false }
pswap-distribution = { path = "../../pswap-distribution", default-features = false }
hex-literal = "0.3.1"

[dev-dependencies]
serde = { version = "1.0.101", default-features = false, features = ["derive"] }
sp-io = { version = "3", default-features = false, branch = 'polkadot-v0.9.8', git = 'https://github.com/paritytech/substrate.git' }
sp-runtime = { version = "3", default-features = false, branch = 'polkadot-v0.9.8', git = 'https://github.com/paritytech/substrate.git' }
pallet-balances = { version = "3", default-features = false, branch = 'polkadot-v0.9.8', git = 'https://github.com/paritytech/substrate.git' }
dex-manager = { path = "../../dex-manager", default-features = false }
dex-api = { path = "../../dex-api", default-features = false }

currencies = { version = "0.4", package = "orml-currencies", default-features = false, git = "https://github.com/KalitaAlexey/open-runtime-module-library.git", branch = "polkadot-0.9.8" }
tokens = { version = "0.4", package = "orml-tokens", default-features = false, git = "https://github.com/KalitaAlexey/open-runtime-module-library.git", branch = "polkadot-0.9.8" }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
    'sp-std/std',
    'sp-core/std',
    'common/std',
    'assets/std',
    'technical/std',
    'trading-pair/std',
    'permissions/std',
    'pool-xyk/std',
]
