[package]
name = "trading-pair-rpc"
version = "0.1.0"
edition = "2018"
authors = ['Polka Biome Ltd. <jihoon@tutanota.de>']
license = "BSD-4-Clause"
homepage = 'https://sora.org'
repository = 'https://github.com/sora-xor/sora2-network'

[dependencies]
serde = { version = "1.0.101", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "2" }
jsonrpc-core = "15.0.0"
jsonrpc-core-client = "15.0.0"
jsonrpc-derive = "15.0.0"
sp-runtime = { version = "3", default-features = false, branch = 'polkadot-v0.9.8', git = 'https://github.com/paritytech/substrate.git' }
sp-api = { version = "3", default-features = false, branch = 'polkadot-v0.9.8', git = 'https://github.com/paritytech/substrate.git' }
sp-blockchain = { version = "3", default-features = false, branch = 'polkadot-v0.9.8', git = 'https://github.com/paritytech/substrate.git' }
sp-std = { version = "3", default-features = false, branch = 'polkadot-v0.9.8', git = 'https://github.com/paritytech/substrate.git' }
sp-core = { version = "3", default-features = false, branch = 'polkadot-v0.9.8', git = 'https://github.com/paritytech/substrate.git' }
sp-rpc = { version = "3", default-features = false, branch = 'polkadot-v0.9.8', git = 'https://github.com/paritytech/substrate.git' }
trading-pair-runtime-api = { path = "../runtime-api" }
common = { path = "../../../common" }
