[package]
edition = '2018'
name = 'bonding-curve-pool'
version = '0.1.0'
authors = ['Polka Biome Ltd. <jihoon@tutanota.de>']
license = "BSD-4-Clause"
homepage = 'https://sora.org'
repository = 'https://github.com/sora-xor/sora2-network'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "2", default-features = false, features = ["derive"] }

currencies = { version = "0.4.1-dev", package = "orml-currencies", default-features = false, git = 'https://github.com/open-web3-stack/open-runtime-module-library.git' }
tokens = { version = "0.4.1-dev", package = "orml-tokens", default-features = false, git = 'https://github.com/open-web3-stack/open-runtime-module-library.git' }
orml-traits = { version = "0.4.1-dev", package = "orml-traits", default-features = false, git = 'https://github.com/open-web3-stack/open-runtime-module-library.git' }


frame-support = { version = "3", default-features = false, branch = 'rococo-v1', git = 'https://github.com/paritytech/substrate.git' }
frame-system = { version = "3", default-features = false, branch = 'rococo-v1', git = 'https://github.com/paritytech/substrate.git' }
serde = { version = "1.0.101", default-features = false, optional = true, features = ["derive"] }
sp-arithmetic = { version = "3", default-features = false, branch = 'rococo-v1', git = 'https://github.com/paritytech/substrate.git' }
sp-runtime = { version = "3", default-features = false, branch = 'rococo-v1', git = 'https://github.com/paritytech/substrate.git' }
sp-std = { version = "3", default-features = false, branch = 'rococo-v1', git = 'https://github.com/paritytech/substrate.git' }

assets = { path = "../assets", default-features = false }
common = { path = "../../common", default-features = false }
dex-api = { path = "../dex-api", default-features = false }
permissions = { path = "../permissions", default-features = false }
technical = { path = "../technical", default-features = false }

[dev-dependencies]
hex-literal = "0.3.1"
pallet-balances = { version = "3", default-features = false, branch = 'rococo-v1', git = 'https://github.com/paritytech/substrate.git' }
sp-core = { version = "3", default-features = false, branch = 'rococo-v1', git = 'https://github.com/paritytech/substrate.git' }
sp-io = { version = "3", default-features = false, branch = 'rococo-v1', git = 'https://github.com/paritytech/substrate.git' }

assets = { path = "../assets" }
common = { path = "../../common", features = ["test"] }
dex-api = { path = "../dex-api" }
dex-manager = { path = "../dex-manager" }
mock-liquidity-source = { path = "../mock-liquidity-source" }
permissions = { path = "../permissions" }
technical = { path = "../technical" }
trading-pair = { path = "../trading-pair" }

[dev-dependencies.cumulus-pallet-parachain-system]
git = 'https://github.com/paritytech/cumulus.git'
branch = 'rococo-v1'
default-features = false

[dev-dependencies.parachain-info]
default-features = false
git = 'https://github.com/paritytech/cumulus.git'
branch = 'rococo-v1'
version = '0.1.0'

[features]
default = ['std']
std = [
    'codec/std',
    'currencies/std',
    'frame-support/std',
    'frame-system/std',
    'orml-traits/std',
    'serde',
    'sp-arithmetic/std',
    'sp-runtime/std',
    'sp-std/std',
    'tokens/std',
]
