[package]
authors = ['Polka Biome Ltd. <jihoon@tutanota.de>']
license = "BSD-4-Clause"
homepage = 'https://sora.org'
repository = 'https://github.com/sora-xor/sora2-network'
description = 'Pool XYK'
edition = '2018'
name = 'pool-xyk'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "2", default-features = false, features = ["derive"] }
num-traits = { version = "0.2.12", default-features = false }

currencies = { version = "0.4.1-dev", package = "orml-currencies", default-features = false, git = 'https://github.com/open-web3-stack/open-runtime-module-library.git' }
orml-traits = { version = "0.4.1-dev", package = "orml-traits", default-features = false, git = 'https://github.com/open-web3-stack/open-runtime-module-library.git' }

frame-support = { version = "3", default-features = false, branch = 'rococo-v1', git = 'https://github.com/paritytech/substrate.git' }
frame-system = { version = "3", default-features = false, branch = 'rococo-v1', git = 'https://github.com/paritytech/substrate.git' }

serde = { version = "1.0.101", optional = true, features = ["derive"], default-features = false }
sp-core = { version = "3", default-features = false, branch = 'rococo-v1', git = 'https://github.com/paritytech/substrate.git' }
sp-runtime = { version = "3", default-features = false, branch = 'rococo-v1', git = 'https://github.com/paritytech/substrate.git' }
sp-std = { version = "3", default-features = false, branch = 'rococo-v1', git = 'https://github.com/paritytech/substrate.git' }

assets = { path = "../assets", default-features = false }
common = { path = "../../common", default-features = false }
dex-manager = { path = "../dex-manager", default-features = false }
permissions = { path = "../permissions", default-features = false }
#pswap-distribution = { path = "../pswap-distribution", default-features = false }
technical = { path = "../technical", default-features = false }
trading-pair = { path = "../trading-pair", default-features = false }

[dev-dependencies]
hex-literal = "0.3.1"
pallet-balances = { version = "3", default-features = false, branch = 'rococo-v1', git = 'https://github.com/paritytech/substrate.git' }
sp-io = { version = "3", default-features = false, branch = 'rococo-v1', git = 'https://github.com/paritytech/substrate.git' }


tokens = { version = "0.4.1-dev", package = "orml-tokens", default-features = false, git = 'https://github.com/open-web3-stack/open-runtime-module-library.git' }

common = { path = "../../common", features = ["test"] }
dex-manager = { path = "../dex-manager" }
permissions = { path = "../permissions" }
pswap-distribution = { path = "../pswap-distribution" }
technical = { path = "../technical" }
trading-pair = { path = "../trading-pair" }

[features]
default = ['std']
std = [
    'codec/std',
    'currencies/std',
    'frame-support/std',
    'frame-system/std',
    'num-traits/std',
    'serde/std',
    'sp-core/std',
    'sp-std/std',
]
