[package]
authors = ['Polka Biome Ltd. <jihoon@tutanota.de>']
license = "BSD-4-Clause"
homepage = 'https://sora.org'
repository = 'https://github.com/sora-xor/sora2-network'
description = 'Consensus accounts for DEX purposes'
edition = '2018'
name = 'technical'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "2", default-features = false, features = ["derive"] }

currencies = { version = "0.4.1-dev", package = "orml-currencies", default-features = false, git = 'https://github.com/open-web3-stack/open-runtime-module-library.git' }
orml-traits = { version = "0.4.1-dev", package = "orml-traits", default-features = false, git = 'https://github.com/open-web3-stack/open-runtime-module-library.git' }

frame-benchmarking = { version = "3", default-features = false, optional = true, branch = 'rococo-v1', git = 'https://github.com/paritytech/substrate.git' }
frame-support = { version = "3", default-features = false, branch = 'rococo-v1', git = 'https://github.com/paritytech/substrate.git' }
frame-system = { version = "3", default-features = false, branch = 'rococo-v1', git = 'https://github.com/paritytech/substrate.git' }
hex-literal = { version = "0.3.1", optional = true }
pallet-balances = { version = "3", default-features = false, branch = 'rococo-v1', git = 'https://github.com/paritytech/substrate.git' }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
sp-core = { version = "3", default-features = false, branch = 'rococo-v1', git = 'https://github.com/paritytech/substrate.git' }
sp-runtime = { version = "3", default-features = false, branch = 'rococo-v1', git = 'https://github.com/paritytech/substrate.git' }
sp-std = { version = "3", default-features = false, branch = 'rococo-v1', git = 'https://github.com/paritytech/substrate.git' }
twox-hash = { version = "1.5.0", default-features = false }

assets = { path = "../assets", default-features = false }
common = { path = "../../common", default-features = false }
permissions = { path = "../permissions", default-features = false, optional = true }
trading-pair = { path = "../trading-pair", default-features = false, optional = true }

[dev-dependencies]
sp-core = { version = "3", default-features = false, branch = 'rococo-v1', git = 'https://github.com/paritytech/substrate.git' }
sp-io = { version = "3", default-features = false, branch = 'rococo-v1', git = 'https://github.com/paritytech/substrate.git' }

tokens = { version = "0.4.1-dev", package = "orml-tokens", default-features = false, git = 'https://github.com/open-web3-stack/open-runtime-module-library.git' }

common = { path = "../../common", features = ["test"] }
dex-manager = { path = "../dex-manager" }
permissions = { path = "../permissions" }

[features]
default = ['std']
std = [
    'codec/std',
    'currencies/std',
    'frame-support/std',
    'frame-system/std',
    'pallet-balances/std',
    'serde',
    'sp-core/std',
    'sp-std/std',
    'twox-hash/std',
]
runtime-benchmarks = [
    "frame-benchmarking",
    "frame-system/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "trading-pair",
    "permissions",

    "hex-literal",
]
